--- a/you.html
+++ b/you.html
@@ -1,4 +1,4 @@
-<!-- Part 1: you.html with subtitle upload integration -->
+<!-- Part 1: you.html with fixed subtitle upload and edit support -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,7 +100,7 @@
   <input type="checkbox" id="lockToggle" onchange="toggleUploadLock()"> lock this video or music<br>
   <input id="lockPassword" type="password" placeholder="password (if locked)" disabled><br>
 
-  <!-- 🎞️ 字幕アップロード機能の追加 -->
+  <!-- 🎞️ 字幕アップロード機能 -->
   <h3>subtitle (.vtt, any language)</h3>
   <input type="checkbox" id="useSubtitleUpload"> upload custom subtitles?<br>
   <div id="subtitleUploadArea" style="display: none;">
@@ -121,11 +121,13 @@
   <div id="list"></div>
 
 <script>
+const SERVER = "https://pikko1.tcpexposer.com";
 let me = Storage.getUser();
 if (!me) location.href = "signin";
 document.getElementById("currentUser").textContent = me;
 document.getElementById("iconPreview").src = `${SERVER}/icons/${me}.jpg`;
 let sortOrder = "desc";
+const subtitleFiles = [];
 
 document.getElementById("useThumbUpload").addEventListener("change", () => {
   const checked = document.getElementById("useThumbUpload").checked;
@@ -137,8 +139,6 @@ document.getElementById("useSubtitleUpload").addEventListener("change", () => {
   const checked = document.getElementById("useSubtitleUpload").checked;
   document.getElementById("subtitleUploadArea").style.display = checked ? "block" : "none";
 });
-
-const subtitleFiles = [];
 
 function addSubtitle() {
   const lang = document.getElementById("subtitleLangInput").value.trim();
@@ -166,29 +166,6 @@ function toggleUploadLock() {
 
 function toggleEditLock(id) {
   document.getElementById(`lockPassword-${id}`).disabled = !document.getElementById(`lockToggle-${id}`).checked;
-}
-
-function cropImage(file, width, height, callback) {
-  const img = new Image();
-  const canvas = document.createElement("canvas");
-  canvas.width = width;
-  canvas.height = height;
-  const ctx = canvas.getContext("2d");
-
-  const reader = new FileReader();
-  reader.onload = () => {
-    img.onload = () => {
-      const ratio = Math.max(width / img.width, height / img.height);
-      const w = img.width * ratio;
-      const h = img.height * ratio;
-      const x = (width - w) / 2;
-      const y = (height - h) / 2;
-      ctx.drawImage(img, x, y, w, h);
-      canvas.toBlob(callback, "image/jpeg");
-    };
-    img.src = reader.result;
-  };
-  reader.readAsDataURL(file);
 }
 
 function renderVideos() {
@@ -256,7 +233,7 @@ function upload() {
         renderVideos();
         resetForm();
 
-        // 🎞️ 字幕送信処理
+        // 🎞️ 字幕送信
         if (document.getElementById("useSubtitleUpload").checked && subtitleFiles.length > 0) {
           subtitleFiles.forEach(({ language, file }) => {
             const subForm = new FormData();
@@ -302,7 +279,162 @@ function upload() {
   }
 }
 
-// 既存の編集・削除・アイコン・アカウント変更などの関数はそのまま（省略）
+function showEdit(id, title, description) {
+  const html = `
+    <h3>Edit</h3>
+    <input id="title-${id}" value="${title}" placeholder="title"><br>
+    <textarea id="desc-${id}" placeholder="description">${description}</textarea><br>
+    <input type="checkbox" id="lockToggle-${id}" onchange="toggleEditLock('${id}')"> lock<br>
+    <input type="password" id="lockPassword-${id}" placeholder="password" disabled><br>
+    <input type="file" id="thumb-${id}" accept=".jpg"><br>
+    <button onclick="submitEdit('${id}')">submit</button>
+    <button onclick="cancelEdit('${id}')">cancel</button>
+  `;
+  document.getElementById(`edit-${id}`).innerHTML = html;
+}
+
+function cancelEdit(id) {
+  document.getElementById(`edit-${id}`).innerHTML = "";
+}
+
+function submitEdit(id) {
+  const title = document.getElementById(`title-${id}`).value.trim();
+  const description = document.getElementById(`desc-${id}`).value.trim();
+  const isLocked = document.getElementById(`lockToggle-${id}`).checked;
+  const password = document.getElementById(`lockPassword-${id}`).value.trim();
+  const thumb = document.getElementById(`thumb-${id}`).files[0];
+
+  const form = new FormData();
+  form.append("title", title);
+  form.append("description", description);
+  form.append("lockPassword", isLocked ? password : "");
+  if (thumb) form.append("thumbnail", thumb);
+
+  fetch(`${SERVER}/editVideo/${id}`, {
+    method: "PATCH",
+    body: form
+  })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      renderVideos();
+    })
+    .catch(() => {
+      alert("Failed to edit.");
+    });
+}
+
+function deleteVideo(id) {
+  if (!confirm("Are you sure you want to delete this video or music?")) return;
+  fetch(`${SERVER}/deleteVideo/${id}`, { method: "DELETE" })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      renderVideos();
+    })
+    .catch(() => {
+      alert("Failed to delete.");
+    });
+}
+
+function updateIcon() {
+  const icon = document.getElementById("iconInput").files[0];
+  const status = document.getElementById("iconStatus");
+  if (!icon) return alert("Select an icon image.");
+  if (icon.size > 40 * 1024) return alert("Icon too big.");
+
+  const form = new FormData();
+  form.append("username", me);
+  form.append("icon", icon);
+
+  status.innerHTML = `<span class="spinner"></span> Uploading...`;
+
+  fetch(`${SERVER}/updateIcon`, {
+    method: "POST",
+    body: form
+  })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      status.textContent = "✅ Icon updated.";
+      document.getElementById("iconPreview").src = `${SERVER}/icons/${me}.jpg?t=${Date.now()}`;
+    })
+    .catch(() => {
+      status.textContent = "❌ Failed to update icon.";
+    });
+}
+
+function changeAccount() {
+  const currentPassword = document.getElementById("currentPassword").value;
+  const newUsername = document.getElementById("newUsername").value;
+  const newPassword = document.getElementById("newPassword").value;
+  if (!currentPassword || !newUsername || !newPassword) return alert("Fill all fields.");
+
+  fetch(`${SERVER}/changeAccount`, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      oldUsername: me,
+      currentPassword,
+      newUsername,
+      newPassword
+    })
+  })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      Storage.setUser(newUsername);
+      location.reload();
+    })
+    .catch(() => {
+      alert("Failed to change account.");
+    });
+}
+
+function removeAccount() {
+  if (!confirm("Are you sure you want to delete your account and all videos?")) return;
+  fetch(`${SERVER}/deleteAccount`, {
+    method: "DELETE",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ username: me })
+  })
+    .then(res => res.ok ? res.json() : Promise.reject())
+    .then(() => {
+      Storage.clearUser();
+      location.href = "./";
+    })
+    .catch(() => {
+      alert("Failed to delete account.");
+    });
+}
+
+function logout() {
+  Storage.clearUser();
+  location.href = "./";
+}
+
+function cropImage(file, width, height, callback) {
+  const img = new Image();
+  const canvas = document.createElement("canvas");
+  canvas.width = width;
+  canvas.height = height;
+  const ctx = canvas.getContext("2d");
+
+  const reader = new FileReader();
+  reader.onload = () => {
+    img.onload = () => {
+      const ratio = Math.max(width / img.width, height / img.height);
+      const w = img.width * ratio;
+      const h = img.height * ratio;
+      const x = (width - w) / 2;
+      const y = (height - h) / 2;
+      ctx.drawImage(img, x, y, w, h);
+      canvas.toBlob(callback, "image/jpeg");
+    };
+    img.src = reader.result;
+  };
+  reader.readAsDataURL(file);
+}
+
+function copyUrl() {
+  navigator.clipboard.writeText(location.href);
+}
 
 renderVideos();
 </script>
